refactor:swager doc
