# docs/swagger.yaml
@@ -1,5 +1,30 @@
 basePath: /
 definitions:
+  model.CommentResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      messgae:
+        type: string
+      photo_id:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  model.CreateSocialmediaRequest:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      social_media_url:
+        type: string
+    required:
+    - name
+    - social_media_url
+    type: object
   model.LoginUserRequest:
     properties:
       email:
@@ -44,6 +69,29 @@ definitions:
     - password
     - username
     type: object
+  model.SocialmediaResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      social_media_url:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  model.UpdateCommentRequest:
+    properties:
+      message:
+        type: string
+      photo_id:
+        type: string
+    required:
+    - message
+    - photo_id
+    type: object
   model.UpdatePhotoRequest:
     properties:
       caption:
@@ -81,6 +129,102 @@ info:
   title: TEST API
   version: "2.0"
 paths:
+  /comment/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Comment
+      parameters:
+      - description: Comment Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: Delete Comment
+      tags:
+      - comment
+    get:
+      consumes:
+      - application/json
+      description: Find Comment
+      parameters:
+      - description: Comment Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.WebResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.CommentResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: Find Comment
+      tags:
+      - comment
+    put:
+      consumes:
+      - application/json
+      description: Edit Comment
+      parameters:
+      - description: Update Comment
+        in: body
+        name: comment
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateCommentRequest'
+      - description: Comment Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: Edit Comment
+      tags:
+      - comment
   /login:
     post:
       consumes:
@@ -145,13 +289,13 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Remove book by ID
+      description: Remove photo by ID
       parameters:
-      - description: Book ID
+      - description: Photo ID
         in: path
         name: id
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -167,7 +311,7 @@ paths:
           description: Service Unavailable
           schema:
             $ref: '#/definitions/model.WebResponse'
-      summary: Remove book by ID
+      summary: Remove photo by ID
       tags:
       - photo
   /photo/id:
@@ -209,6 +353,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/model.UpdatePhotoRequest'
+      - description: Photo ID
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -262,4 +411,147 @@ paths:
       summary: Register a new user
       tags:
       - users
+  /socialmedia/:
+    get:
+      consumes:
+      - application/json
+      description: list socialmedia
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.WebResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/model.SocialmediaResponse'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: list socialmedia
+      tags:
+      - socialmedia
+    post:
+      consumes:
+      - application/json
+      description: Register socialmedia
+      parameters:
+      - description: Create Social Media
+        in: body
+        name: socialmedia
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateSocialmediaRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: Register a new socialmedia
+      tags:
+      - socialmedia
+  /socialmedia/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete socialmedia
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: Delete Socialmedia
+      tags:
+      - socialmedia
+    get:
+      consumes:
+      - application/json
+      description: find socialmedia
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.WebResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.SocialmediaResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: find socialmedia
+      tags:
+      - socialmedia
+    put:
+      consumes:
+      - application/json
+      description: Edit socialmedia
+      parameters:
+      - description: Update socialmedia
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateSocialmediaRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.WebResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.SocialmediaResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+      summary: edit socialmedia
+      tags:
+      - socialmedia
 swagger: "2.0"
