# interfaces/http/api/socialmedia_handler.go
@@ -29,6 +29,18 @@ func (handler SocialMediaHandler) Route(app *fiber.App){
 	socialmedia.Delete("/:id",handler.DeleteSocialmedia)
 }
 
+
+// Create a new socialmedia
+// @Summary Register a new socialmedia
+// @Description Register socialmedia
+// @Tags socialmedia
+// @Accept json
+// @Produce json
+// @Param socialmedia body model.CreateSocialmediaRequest true "Create Social Media"
+// @Success 200 {object} model.WebResponse{}
+// @Failure 400 {object} model.WebResponse{}
+// @Failure 500 {object} model.WebResponse{}
+// @Router /socialmedia/ [post]
 func (handler SocialMediaHandler) PostSocialmedia(ctx *fiber.Ctx) error {
 	var request model.CreateSocialmediaRequest
 	
@@ -48,13 +60,32 @@ func (handler SocialMediaHandler) PostSocialmedia(ctx *fiber.Ctx) error {
 	return nil
 }
 
+// GetAllSocialmedia list socialmedia
+// @Summary list socialmedia
+// @Description list socialmedia
+// @Tags socialmedia
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.WebResponse{data=[]model.SocialmediaResponse}
+// @Failure 400 {object} model.WebResponse{}
+// @Failure 500 {object} model.WebResponse{}
+// @Router /socialmedia/ [get]
 func (handler SocialMediaHandler) GetAllSocialmedia(ctx *fiber.Ctx) error {
 	responseCode,_,data := handler.usecase.ListSocialmedia()
 	model.GetResponse(ctx,responseCode,"",data)
 	return nil
 }
 
-
+// FindSocialmedia find socialmedia by id
+// @Summary find socialmedia
+// @Description find socialmedia
+// @Tags socialmedia
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.WebResponse{data=model.SocialmediaResponse}
+// @Failure 400 {object} model.WebResponse{}
+// @Failure 500 {object} model.WebResponse{}
+// @Router /socialmedia/{id} [GET]
 func (handler SocialMediaHandler) GetOneSocialmedia(ctx *fiber.Ctx) error {
 	id := ctx.Params("id")
 	responseCode,_,data := handler.usecase.FindSocialmediaById(id)
@@ -62,6 +93,17 @@ func (handler SocialMediaHandler) GetOneSocialmedia(ctx *fiber.Ctx) error {
 	return nil
 }
 
+// Edit Socialmedia
+// @Summary edit socialmedia
+// @Description Edit socialmedia
+// @Tags socialmedia
+// @Accept json
+// @Produce json
+// @Param user body model.CreateSocialmediaRequest true "Update socialmedia"
+// @Success 200 {object} model.WebResponse{data=model.SocialmediaResponse}
+// @Failure 400 {object} model.WebResponse{}
+// @Failure 500 {object} model.WebResponse{}
+// @Router /socialmedia/{id} [PUT]
 func (handler SocialMediaHandler) EditSocialmedia(ctx *fiber.Ctx) error{
 	var request model.CreateSocialmediaRequest
 	ctx.BodyParser(&request)
@@ -76,6 +118,16 @@ func (handler SocialMediaHandler) EditSocialmedia(ctx *fiber.Ctx) error{
 	return nil
 }
 
+// Delete socialmedia
+// @Summary Delete Socialmedia
+// @Description Delete socialmedia
+// @Tags socialmedia
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.WebResponse{}
+// @Failure 400 {object} model.WebResponse{}
+// @Failure 500 {object} model.WebResponse{}
+// @Router /socialmedia/{id} [DELETE]
 func (handler SocialMediaHandler) DeleteSocialmedia(ctx *fiber.Ctx) error {
 	responseCode,_,response := handler.usecase.DeleteSocialmedia(ctx)
 	model.GetResponse(ctx,responseCode,"",response)
